--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.2",
+    "@angular-devkit/core": "0.0.28",
     "@angular/animations": "^5.0.0",
     "@angular/cli": "1.6.4",
     "@angular/common": "^5.2.0",
@@ -29,7 +30,9 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "typescript": "~2.5.3"
+
   },
   "engines": {
     "node": "6.11.1",
@@ -57,7 +60,6 @@
     "rxjs": "^5.5.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3",
     "zone.js": "^0.8.4"
   }
 }
