--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot -prod"
+    "postinstall": "ng build --aot=false -prod"
   },
   "private": true,
   "dependencies": {
@@ -30,9 +30,7 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.19",
-    "typescript": "~2.5.3"
-
+    "zone.js": "^0.8.19"
   },
   "engines": {
     "node": "6.11.1",
@@ -60,6 +58,7 @@
     "rxjs": "^5.5.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.9.1",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "typescript": "~2.5.3"
   }
 }
