--- a/package.json
+++ b/package.json
@@ -30,7 +30,11 @@
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.19"
+    "zone.js": "^0.8.19",
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
+    "typescript": "~2.5.3"
+
   },
   "engines": {
     "node": "6.11.1",
@@ -42,10 +46,8 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "chart.js": "^2.5.0",
     "codelyzer": "^4.0.1",
     "font-awesome": "^4.7.0",
-    "hammerjs": "^2.0.8",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
@@ -59,6 +61,5 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.9.1",
     "zone.js": "^0.8.4",
-    "typescript": "~2.5.3"
   }
 }
