--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
     "rxjs": "^5.5.0",
     "ts-node": "~3.2.0",
     "tslint": "~5.9.1",
-    "zone.js": "^0.8.4",
+    "zone.js": "^0.8.4"
   }
 }
