--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "zone.js": "^0.8.19",
     "chart.js": "^2.5.0",
     "hammerjs": "^2.0.8",
-    "typescript": "~2.5.3"
+    "typescript": "~2.5.3",
+    "font-awesome": "^4.7.0"
+
 
   },
   "engines": {
@@ -47,7 +49,6 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "codelyzer": "^4.0.1",
-    "font-awesome": "^4.7.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
