--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "express": "^4.16.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.19",
-    "typescript": "~2.5.3",
+    "typescript": "~2.5.3"
   },
   "devDependencies": {
     "@angular/forms": "^5.2.0",
