--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "ng build --aot -prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot=false -prod"
   },
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.2",
+    "@angular-devkit/core": "0.0.28",
     "@angular/animations": "^5.0.0",
     "@angular/cli": "1.6.4",
     "@angular/common": "^5.2.1",
@@ -29,7 +31,10 @@
     "express": "^4.16.2",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.19",
-    "typescript": "~2.5.3"
+    "chart.js": "^2.5.0",
+    "hammerjs": "^2.0.8",
+    "typescript": "~2.5.3",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "@angular/forms": "^5.2.0",
@@ -37,10 +42,7 @@
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "chart.js": "^2.5.0",
     "codelyzer": "^4.0.1",
-    "font-awesome": "^4.7.0",
-    "hammerjs": "^2.0.8",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.0",
