--- a/package.json
+++ b/package.json
@@ -56,5 +56,10 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.9.1",
     "zone.js": "^0.8.4"
-  }
+  },
+  
+  "engines": {
+       "node": "8.9.1",
+       "npm": "5.5.1"
+   }
 }
