--- a/package.json
+++ b/package.json
@@ -3,14 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "node server.js",
-    "ng": "ng",
-    "build": "ng build --aot -prod",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --aot=false -prod"
-  },
+  "start": "node index.js",
+  "build": "webpack"
+},
   "private": true,
   "dependencies": {
     "@agm/core": "^1.0.0-beta.2",
@@ -57,9 +52,7 @@
     "tslint": "~5.9.1",
     "zone.js": "^0.8.4"
   },
-  
-  "engines": {
-       "node": "8.9.1",
-       "npm": "5.5.1"
-   }
+  engines": {
+    "node": "10.3.0"
+  } 
 }
